# potato-motion-editor

./: CMakeLists.txt  DESIGN_COMMIT10_EXPORT_FIX.md  DESIGN_COMMIT11_UNDO_SELECTION.md  DESIGN_COMMIT12_PREVIEW_SCALE.md  DESIGN_COMMIT13_TEXT_LAYERS.md  DESIGN_COMMIT14_LAYER_TIMING_DUPLICATE_BLEND.md  DESIGN_COMMIT15_LAYOUT_REFACTOR.md  DESIGN_COMMIT16_PER_LAYER_FX_DROPSHADOW.md  DESIGN_COMMIT1_AUTHORED_EVALUATED_SPLIT.md  DESIGN_COMMIT1_REVISED_ANIMATED_PROPERTY.md  DESIGN_COMMIT2_SAVE_LOAD.md  DESIGN_COMMIT3_UNDO_KEYFRAMES_PARENT.md  DESIGN_COMMIT4_PRESERVE_WORLD_PARENT.md  DESIGN_COMMIT5_GRAPH_EDITOR.md  DESIGN_COMMIT6_AE_ACCURATE_GRAPH.md  DESIGN_COMMIT7_SPEED_EDIT_PLUS_FIXES.md  DESIGN_COMMIT8_COMP_SETTINGS.md  DESIGN_COMMIT9_STROKES_CORNERS.md  END_OF_DAY_NOTES.md  END_OF_DAY_NOTES_2026-07-24.md  GEMINI_TIEBREAKER.md  LAYOUT_MAP.md  PROJECT_BRIEFING.md  RFC_FOR_EXTERNAL_LLMS.md  SOFTWARE_SPEC.md  TEST_CHECKLIST.md
.github/workflows/: build.yml
src/: AlightXmlImporter.cpp  AlightXmlImporter.h  AnimatedProperty.h  AnimationEngine.cpp  AnimationEngine.h  Camera.cpp  Camera.h  CompositionRenderer.cpp  CompositionRenderer.h  Effect.h  EffectManager.cpp  EffectManager.h  ExportEngine.cpp  ExportEngine.h  Layer.h  LayerManager.cpp  LayerManager.h  MathTypes.h  RenderEngine.cpp  RenderEngine.h  Serialization.cpp  Serialization.h  TextRenderer.cpp  TextRenderer.h  UndoStack.cpp  UndoStack.h  main.cpp
